objects/vlocity_cmt__VlocityTrackingComponent__c.object
<CustomObject>
    <description>Describes each component(Card, Omniscript) involved in a Tracking Group.</description>
    <fields>
        <fullName>vlocity_cmt__ComponentType__c</fullName>
        <description>Associated component type.</description>
        <inlineHelpText>Associated component type.</inlineHelpText>
        <label>Component Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Omniscript</fullName>
                </value>
                <value>
                    <fullName>Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ComponentVersion__c</fullName>
        <description>Version of the related component.</description>
        <inlineHelpText>Version of the related component.</inlineHelpText>
        <label>Component Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>Data pack support.</description>
        <externalId>true</externalId>
        <label>GlobalKey</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VlocityTrackingGroupId__c</fullName>
        <description>Parent Vlocity Tracking Group.</description>
        <inlineHelpText>Parent Vlocity Tracking Group.</inlineHelpText>
        <label>Vlocity Tracking Group</label>
        <referenceTo>vlocity_cmt__VlocityTrackingGroup__c</referenceTo>
        <relationshipLabel>Vlocity Tracking Components</relationshipLabel>
        <relationshipName>VlocityTrackingComponents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Vlocity Tracking Component</label>
    <nameField>
        <label>Component Identifier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Tracking Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>